* Added: concept for MapStorage and loading provided maps. * Added: Maps folder and first ever map (for 2 players). Added dev button to load it. * Editor: locking size now works correctly when loading maps.

--- a/MobileClient/www/index.html
+++ b/MobileClient/www/index.html
@@ -187,6 +187,7 @@
 				<button id="BtnBrowse" style="display: none;">Browse</button>
 				<input id="TbBrowseAddress" type="text" value="http://nibblebyte.no-ip.org/t" style="display: none;" />
 				<button id="BtnUndo">Undo</button>
+				<button id="BtnDance42">Dance42</button>
 
 			</div>
 
@@ -385,6 +386,8 @@
 
 			<script type="text/javascript" src="Javascript/Utils/ClientDevUtils.js"></script>
 			<script type="text/javascript" src="Javascript/Render/DisplayManager.js"></script>
+
+			<script type="text/javascript" src="Javascript/MapsStorage.js"></script>
 		
 		<!-- Components -->
 			<script type="text/javascript" src="Javascript/Render/Components/CAnimations.js"></script>
