--- a/MobileClient/www/index.html
+++ b/MobileClient/www/index.html
@@ -165,6 +165,42 @@
 								<td>Lock sizes:</td>
 								<td><input id="GamePropsLockSizesEditor" type="checkbox" value="false" /></td>
 							</tr>
+
+
+							<tr>
+								<td>Starting Credits:</td>
+								<td>
+									<select id="GamePropsStartingCreditsEditor">
+										<option value="50">50</option>
+										<option value="100">100</option>
+										<option value="150">150</option>
+										<option value="200">200</option>
+										<option value="250">250</option>
+										<option value="300">300</option>
+										<option value="400">400</option>
+										<option value="500">500</option>
+										<option value="750">750</option>
+										<option value="1000">1000</option>
+										<option value="1500">1500</option>
+										<option value="2000">2000</option>
+									</select>
+								</td>
+							</tr>
+							<tr>
+								<td>Credits per mine:</td>
+								<td>
+									<select id="GamePropsCreditsPerMineEditor">
+										<option value="50">50</option>
+										<option value="100">100</option>
+										<option value="150">150</option>
+										<option value="200">200</option>
+										<option value="250">250</option>
+										<option value="300">300</option>
+										<option value="400">400</option>
+										<option value="500">500</option>
+									</select>
+								</td>
+							</tr>
 						</tbody>
 					</table>
 
