* Updated Forest01 sprite. Fixed terrain skins to work with animators (if name matches).

--- a/MobileClient/www/index.html
+++ b/MobileClient/www/index.html
@@ -153,12 +153,12 @@
 
 
 							<tr>
-								<td>Width:</td>
-								<td><input id="GamePropsWidthEditor" type="number" min="2" max="20" step="1" value="" /></td>
-							</tr>
-							<tr>
-								<td>Height:</td>
-								<td><input id="GamePropsHeightEditor" type="number" min="2" max="20" step="1" value="" /></td>
+								<td>Sizes:</td>
+								<td>
+									<input id="GamePropsWidthEditor" type="number" min="2" max="20" step="1" value="" />
+									x
+									<input id="GamePropsHeightEditor" type="number" min="2" max="20" step="1" value="" />
+								</td>
 							</tr>
 							
 							<tr>
@@ -483,6 +483,7 @@
 			<script type="text/javascript" src="Assets/Render/SpriteAnimations/SpriteAnimations.js"></script>
 
 			<script type="text/javascript" src="Assets/Render/SpriteAnimations/World/Base.js"></script>
+			<script type="text/javascript" src="Assets/Render/SpriteAnimations/World/Forest.js"></script>
 			<script type="text/javascript" src="Assets/Render/SpriteAnimations/World/HQ.js"></script>
 			<script type="text/javascript" src="Assets/Render/SpriteAnimations/World/Minerals.js"></script>
 			<script type="text/javascript" src="Assets/Render/SpriteAnimations/World/Factory.js"></script>
