--- a/trunk/MobileClient/www/index.html
+++ b/trunk/MobileClient/www/index.html
@@ -201,6 +201,19 @@
 									</select>
 								</td>
 							</tr>
+
+							<tr>
+								<td>Players:</td>
+								<td>
+									<select id="GamePropsPlayersEditor">
+										<option value="2">2</option>
+										<option value="3">3</option>
+										<option value="4">4</option>
+										<option value="6">6</option>
+										<option value="8">8</option>
+									</select>
+								</td>
+							</tr>
 						</tbody>
 					</table>
 
