--- a/trunk/MobileClient/www/index.html
+++ b/trunk/MobileClient/www/index.html
@@ -110,7 +110,7 @@
 
 
 			<div id="UnitPropsEditor" class="dialog_blocker">
-				<div id="UnitPropsEditorContainer" class="dialog dialog_container_floating">
+				<div id="UnitPropsEditorContainer" class="dialog dialog_container_floating editor_props_container">
 					<div class="dialog_title">Unit Properties</div>
 
 					<table class="dialog_body">
@@ -137,7 +137,7 @@
 			</div>
 
 			<div id="GamePropsEditor" class="dialog_blocker">
-				<div id="GamePropsEditorContainer" class="dialog dialog_container_floating">
+				<div id="GamePropsEditorContainer" class="dialog dialog_container_floating editor_props_container">
 					<div class="dialog_title">Game Properties</div>
 
 					<table class="dialog_body">
@@ -166,40 +166,9 @@
 								<td><input id="GamePropsLockSizesEditor" type="checkbox" value="false" /></td>
 							</tr>
 
-
 							<tr>
-								<td>Starting Credits:</td>
-								<td>
-									<select id="GamePropsStartingCreditsEditor">
-										<option value="50">50</option>
-										<option value="100">100</option>
-										<option value="150">150</option>
-										<option value="200">200</option>
-										<option value="250">250</option>
-										<option value="300">300</option>
-										<option value="400">400</option>
-										<option value="500">500</option>
-										<option value="750">750</option>
-										<option value="1000">1000</option>
-										<option value="1500">1500</option>
-										<option value="2000">2000</option>
-									</select>
-								</td>
-							</tr>
-							<tr>
-								<td>Credits per mine:</td>
-								<td>
-									<select id="GamePropsCreditsPerMineEditor">
-										<option value="50">50</option>
-										<option value="100">100</option>
-										<option value="150">150</option>
-										<option value="200">200</option>
-										<option value="250">250</option>
-										<option value="300">300</option>
-										<option value="400">400</option>
-										<option value="500">500</option>
-									</select>
-								</td>
+								<td>Custom map:</td>
+								<td><input id="GamePropsCustomMapEditor" type="checkbox" value="false" /></td>
 							</tr>
 
 							<tr>
@@ -214,6 +183,31 @@
 									</select>
 								</td>
 							</tr>
+							
+
+
+
+							<tr generic_map>
+								<td>Starting Credits:</td>
+								<td>
+									<select id="GamePropsStartingCreditsEditor">
+									</select>
+								</td>
+							</tr>
+							<tr generic_map>
+								<td>Credits per mine:</td>
+								<td>
+									<select id="GamePropsCreditsPerMineEditor">
+									</select>
+								</td>
+							</tr>
+
+							<tr custom_map>
+								<td>Players Settings</td>
+								<td>
+									<button id="BtnPlayersProps">Modify</button>
+								</td>
+							</tr>
 						</tbody>
 					</table>
 
@@ -224,6 +218,24 @@
 				</div>
 			</div>
 
+			<div id="PlayersPropsEditor" class="dialog_blocker">
+				<div id="PlayersPropsEditorContainer" class="dialog dialog_container_floating editor_props_container">
+					<div class="dialog_title">Players Properties</div>
+
+					<table class="dialog_body">
+						<tbody id="PlayersPropsTable">
+						</tbody>
+					</table>
+
+					<div class="dialog_buttons">
+						<button id="BtnPlayersPropsPrev">Previous</button>
+						<button id="BtnPlayersPropsNext">Next</button>
+					</div>
+					<div class="dialog_buttons">
+						<button id="BtnPlayersPropsClose" class="btn_done">Close</button>
+					</div>
+				</div>
+			</div>
 
 			<div id="ToolbarMore" class="toolbar_more" >
 				<button id="BtnConsole" onclick="$('#Console').toggle();">~</button>
@@ -533,6 +545,7 @@
 			<script type="text/javascript" src="Javascript/Editor/Systems/EditorController.js"></script>
 			<script type="text/javascript" src="Javascript/Editor/Systems/EditorUnitPropertiesController.js"></script>
 			<script type="text/javascript" src="Javascript/Editor/Systems/EditorGamePropertiesController.js"></script>
+			<script type="text/javascript" src="Javascript/Editor/Systems/EditorPlayersPropertiesController.js"></script>
 
 			<script type="text/javascript" src="Javascript/ClientStates/WorldEditor.js"></script>
 			
