--- a/trunk/MobileClient/www/index.html
+++ b/trunk/MobileClient/www/index.html
@@ -516,6 +516,7 @@
 			<script type="text/javascript" src="Assets/Render/SpriteAnimations/Units/TeslaTrooper.js"></script>
 			<script type="text/javascript" src="Assets/Render/SpriteAnimations/Units/PeaceKeeper.js"></script>
 			<script type="text/javascript" src="Assets/Render/SpriteAnimations/Units/FlakTrooper.js"></script>
+			<script type="text/javascript" src="Assets/Render/SpriteAnimations/Units/Nibbler.js"></script>
 
 			<script type="text/javascript" src="Assets/Render/SpriteAnimations/FightPortraits/Baron.js"></script>
 			<script type="text/javascript" src="Assets/Render/SpriteAnimations/FightPortraits/Colonel.js"></script>
@@ -523,6 +524,7 @@
 			<script type="text/javascript" src="Assets/Render/SpriteAnimations/FightUnits/TeslaTrooperFight.js"></script>
 			<script type="text/javascript" src="Assets/Render/SpriteAnimations/FightUnits/PeaceKeeperFight.js"></script>
 			<script type="text/javascript" src="Assets/Render/SpriteAnimations/FightUnits/FlakTrooperFight.js"></script>
+			<script type="text/javascript" src="Assets/Render/SpriteAnimations/FightUnits/NibblerFight.js"></script>
 
 			<script type="text/javascript" src="Assets/Render/SpriteAnimations/Particles/GroundExplosion.js"></script>
 
