--- a/trunk/MobileClient/www/index.html
+++ b/trunk/MobileClient/www/index.html
@@ -544,6 +544,7 @@
 		<!-- ==========	Mobile Client - Editor ====================== -->
 			<script type="text/javascript" src="Javascript/Editor/EditorEvents.js"></script>
 			<script type="text/javascript" src="Javascript/Editor/Brushes.js"></script>
+			<script type="text/javascript" src="Javascript/Editor/EditorState.js"></script>
 			<script type="text/javascript" src="Javascript/Editor/Systems/EditorController.js"></script>
 			<script type="text/javascript" src="Javascript/Editor/Systems/EditorUnitPropertiesController.js"></script>
 			<script type="text/javascript" src="Javascript/Editor/Systems/EditorGamePropertiesController.js"></script>
