--- a/trunk/MobileClient/www/index.html
+++ b/trunk/MobileClient/www/index.html
@@ -248,7 +248,7 @@
 				<button id="BtnBrowse" style="display: none;">Browse</button>
 				<input id="TbBrowseAddress" type="text" value="http://nibblebyte.no-ip.org/t" style="display: none;" />
 				<button id="BtnUndo">Undo</button>
-				<button id="BtnDance42">Dance42</button>
+				<button onclick="currentState.loadMap('Dance42');">Dance42</button>
 
 			</div>
 
