* Added proper death sprite. Unit is hidden on specific frame.

--- a/MobileClient/www/index.html
+++ b/MobileClient/www/index.html
@@ -525,6 +525,7 @@
 			<script type="text/javascript" src="Assets/Render/SpriteAnimations/FightUnits/PeaceKeeperFight.js"></script>
 			<script type="text/javascript" src="Assets/Render/SpriteAnimations/FightUnits/FlakTrooperFight.js"></script>
 			<script type="text/javascript" src="Assets/Render/SpriteAnimations/FightUnits/NibblerFight.js"></script>
+			<script type="text/javascript" src="Assets/Render/SpriteAnimations/FightUnits/UnitDeathFight.js"></script>
 
 			<script type="text/javascript" src="Assets/Render/SpriteAnimations/Particles/GroundExplosion.js"></script>
 
