* Fight: redesigned fight elements to new diagonal layout. * Fight: resized portrait sprites. * Fight: Added "Frame" button to toggle the red frame. * Fight: Fixed wrong frame dimensions based only on asset-scale.

--- a/MobileClient/www/index.html
+++ b/MobileClient/www/index.html
@@ -91,6 +91,9 @@
 				</div>
 
 				<div style="position:absolute; bottom: 16px; right: 4px;">
+					<span id="FightScreenFrame" style="margin: 4px; color: white; background: rgba(82, 82, 82, 0.88); border-radius: 8px; padding: 8px;">
+						Frame
+					</span>
 					<span id="FightScreenRestart" style="margin: 4px; color: white; background: rgba(82, 82, 82, 0.88); border-radius: 8px; padding: 8px;">
 						Restart
 					</span>
@@ -492,6 +495,7 @@
 			<script type="text/javascript" src="Javascript/FightRendering/Components/CFightUnitRendering.js"></script>
 			<script type="text/javascript" src="Javascript/FightRendering/Components/CFightUnitRenderingEffects.js"></script>
 
+			<script type="text/javascript" src="Javascript/FightRendering/Systems/FightLayoutSystem.js"></script>
 			<script type="text/javascript" src="Javascript/FightRendering/Systems/FightControllerSystem.js"></script>
 			<script type="text/javascript" src="Javascript/FightRendering/Systems/FightTilesRenderingSystem.js"></script>
 			<script type="text/javascript" src="Javascript/FightRendering/Systems/FightUnitsRenderingSystem.js"></script>
