* Added ability to zoom game world. * iScroll: added zoom functionality from the iscroll-zoom.js.

--- a/MobileClient/www/index.html
+++ b/MobileClient/www/index.html
@@ -32,6 +32,7 @@
 			<div id="FrameStats"></div>
 			<div id="ScreenStats"></div>
 			<div id="AssetsStats"></div>
+			<div id="ZoomStats"></div>
 			<div id="DebugStats"></div>
 		</div>
 		<div id="RuntimeStatsButton" onclick="$('#RuntimeStats').show(); $('#RuntimeStatsButton').hide(); window.FrameStats.resume();">
