--- a/trunk/MobileClient/www/index.html
+++ b/trunk/MobileClient/www/index.html
@@ -99,7 +99,7 @@
 						Restart
 					</span>
 					<span id="FightScreenQuit" style="margin: 4px; color: white; background: rgba(82, 82, 82, 0.88); border-radius: 8px; padding: 8px;">
-						Quit
+						Skip
 					</span>
 				</div>
 			</div>
