* Fight: Added VS animation. * Fight: Updated PeaceKeeper sprite.

--- a/MobileClient/www/index.html
+++ b/MobileClient/www/index.html
@@ -505,6 +505,7 @@
 			<script type="text/javascript" src="Javascript/FightRendering/Systems/FightPortraitsController.js"></script>
 			<script type="text/javascript" src="Javascript/FightRendering/Systems/FightUnitStatsController.js"></script>
 			<script type="text/javascript" src="Javascript/FightRendering/Systems/FightUnitHealthsController.js"></script>
+			<script type="text/javascript" src="Javascript/FightRendering/Systems/FightVSRenderingSystem.js"></script>
 
 			<script type="text/javascript" src="Javascript/FightRendering/FightRenderingManager.js"></script>
 			
@@ -522,6 +523,8 @@
 			<script type="text/javascript" src="Assets/Render/SpriteAnimations/Units/PeaceKeeper.js"></script>
 			<script type="text/javascript" src="Assets/Render/SpriteAnimations/Units/FlakTrooper.js"></script>
 			<script type="text/javascript" src="Assets/Render/SpriteAnimations/Units/Nibbler.js"></script>
+
+			<script type="text/javascript" src="Assets/Render/SpriteAnimations/Fight/VS.js"></script>
 
 			<script type="text/javascript" src="Assets/Render/SpriteAnimations/FightPortraits/Baron.js"></script>
 			<script type="text/javascript" src="Assets/Render/SpriteAnimations/FightPortraits/Colonel.js"></script>
