* AI: added button to set current player as AI (and clear AI from it). * Fight: secured pressing "skip" while fading out.

--- a/MobileClient/www/index.html
+++ b/MobileClient/www/index.html
@@ -263,6 +263,7 @@
 					<button id="BtnSave">Save</button>
 					<button id="BtnLoad">Load</button>
 					<button id="BtnPlayer">Player</button>
+					<button id="BtnPlayerType">Set AI</button>
 					<button id="BtnRemoveTile">Rem</button>
 				</div>
 			</div>
