--- a/trunk/MobileClient/www/index.html
+++ b/trunk/MobileClient/www/index.html
@@ -263,6 +263,7 @@
 					<button id="BtnSave">Save</button>
 					<button id="BtnLoad">Load</button>
 					<button id="BtnPlayer">Player</button>
+					<button id="BtnPlayerType">Set AI</button>
 					<button id="BtnRemoveTile">Rem</button>
 				</div>
 			</div>
