--- a/MobileClient/www/index.html
+++ b/MobileClient/www/index.html
@@ -325,6 +325,7 @@
 			<script type="text/javascript" src="Javascript/Core/Engine/Utils/Enums.js"></script>
 			<script type="text/javascript" src="Javascript/Core/Engine/Utils/Utils.js"></script>
 			<script type="text/javascript" src="Javascript/Core/Engine/Utils/Subscriber.js"></script>
+			<script type="text/javascript" src="Javascript/Core/Engine/Utils/TasksMonitor.js"></script>
 			
 		<!-- ECS framework -->
 			<script type="text/javascript" src="Javascript/Core/Engine/ECS/Entity.js"></script>
