--- a/MobileClient/www/index.html
+++ b/MobileClient/www/index.html
@@ -523,6 +523,7 @@
 
 			<script type="text/javascript" src="Assets/Render/SpriteAnimations/Units/TeslaTrooper.js"></script>
 			<script type="text/javascript" src="Assets/Render/SpriteAnimations/Units/PeaceKeeper.js"></script>
+			<script type="text/javascript" src="Assets/Render/SpriteAnimations/Units/Ranger.js"></script>
 			<script type="text/javascript" src="Assets/Render/SpriteAnimations/Units/FlakTrooper.js"></script>
 			<script type="text/javascript" src="Assets/Render/SpriteAnimations/Units/Nibbler.js"></script>
 
