* Editor-Fixed: applying game properties for custom map cleared non-generic units. * Editor-Fixed: applying game properties preserves unit brush if possible. * Added UnitTesting map for testing out units.

--- a/MobileClient/www/index.html
+++ b/MobileClient/www/index.html
@@ -254,6 +254,7 @@
 				<button id="BtnUndo">Undo</button>
 				<button onclick="currentState.loadMap('Dance42');">Dance42</button>
 				<button onclick="currentState.loadMap('HexIsle');">HexIsle</button>
+				<button onclick="currentState.loadMap('UnitTesting');">UnitTesting</button>
 
 			</div>
 
