--- a/trunk/MobileClient/www/index.html
+++ b/trunk/MobileClient/www/index.html
@@ -254,6 +254,7 @@
 				<button id="BtnUndo">Undo</button>
 				<button onclick="currentState.loadMap('Dance42');">Dance42</button>
 				<button onclick="currentState.loadMap('HexIsle');">HexIsle</button>
+				<button onclick="currentState.loadMap('UnitTesting');">UnitTesting</button>
 
 			</div>
 
