--- a/trunk/MobileClient/www/index.html
+++ b/trunk/MobileClient/www/index.html
@@ -525,6 +525,7 @@
 			<script type="text/javascript" src="Assets/Render/SpriteAnimations/Units/TeslaTrooper.js"></script>
 			<script type="text/javascript" src="Assets/Render/SpriteAnimations/Units/PeaceKeeper.js"></script>
 			<script type="text/javascript" src="Assets/Render/SpriteAnimations/Units/Ranger.js"></script>
+			<script type="text/javascript" src="Assets/Render/SpriteAnimations/Units/Biker.js"></script>
 			<script type="text/javascript" src="Assets/Render/SpriteAnimations/Units/FlakTrooper.js"></script>
 			<script type="text/javascript" src="Assets/Render/SpriteAnimations/Units/Nibbler.js"></script>
 
