--- a/trunk/MobileClient/www/index.html
+++ b/trunk/MobileClient/www/index.html
@@ -528,6 +528,7 @@
 			<script type="text/javascript" src="Assets/Render/SpriteAnimations/Units/Biker.js"></script>
 			<script type="text/javascript" src="Assets/Render/SpriteAnimations/Units/FlakTrooper.js"></script>
 			<script type="text/javascript" src="Assets/Render/SpriteAnimations/Units/Nibbler.js"></script>
+			<script type="text/javascript" src="Assets/Render/SpriteAnimations/Units/Sting.js"></script>
 
 			<script type="text/javascript" src="Assets/Render/SpriteAnimations/Fight/VS.js"></script>
 
