--- a/trunk/MobileClient/www/index.html
+++ b/trunk/MobileClient/www/index.html
@@ -525,10 +525,12 @@
 			<script type="text/javascript" src="Assets/Render/SpriteAnimations/Units/TeslaTrooper.js"></script>
 			<script type="text/javascript" src="Assets/Render/SpriteAnimations/Units/PeaceKeeper.js"></script>
 			<script type="text/javascript" src="Assets/Render/SpriteAnimations/Units/Ranger.js"></script>
+			<script type="text/javascript" src="Assets/Render/SpriteAnimations/Units/IonDrone.js"></script>
 			<script type="text/javascript" src="Assets/Render/SpriteAnimations/Units/Biker.js"></script>
 			<script type="text/javascript" src="Assets/Render/SpriteAnimations/Units/FlakTrooper.js"></script>
 			<script type="text/javascript" src="Assets/Render/SpriteAnimations/Units/Nibbler.js"></script>
 			<script type="text/javascript" src="Assets/Render/SpriteAnimations/Units/Sting.js"></script>
+			<script type="text/javascript" src="Assets/Render/SpriteAnimations/Units/DarkAdroit.js"></script>
 
 			<script type="text/javascript" src="Assets/Render/SpriteAnimations/Fight/VS.js"></script>
 
