--- a/trunk/MobileClient/www/index.html
+++ b/trunk/MobileClient/www/index.html
@@ -357,6 +357,7 @@
 			<script type="text/javascript" src="Javascript/Core/Gameplay/PlayersData.js"></script>
 			<script type="text/javascript" src="Javascript/Core/Gameplay/GameState.js"></script>
 			<script type="text/javascript" src="Javascript/Core/Gameplay/GameExecutor.js"></script>
+			<script type="text/javascript" src="Javascript/Core/Gameplay/GameLoader.js"></script>
 			<script type="text/javascript" src="Javascript/Core/Gameplay/Store.js"></script>
 			
 		<!-- Gameplay - Components -->
