--- a/trunk/MobileClient/www/index.html
+++ b/trunk/MobileClient/www/index.html
@@ -433,7 +433,7 @@
 			<script type="text/javascript" src="Javascript/AIControllerUI.js"></script>
 
 		<!-- ==========	Mobile Client ====================== -->
-			<script type="text/javascript" charset="utf-8" src="Javascript/BrowserBackwardCompatibility.js"></script>
+			<script type="text/javascript" charset="utf-8" src="Javascript/Utils/BrowserBackwardCompatibility.js"></script>
 
 		<!-- 3rd Party -->
 
@@ -454,6 +454,7 @@
 
 			<script type="text/javascript" charset="utf-8" src="Javascript/3rdParty/Blob.js"></script>
 			<script type="text/javascript" charset="utf-8" src="Javascript/3rdParty/FileSaver.min.js"></script>
+			<script type="text/javascript" charset="utf-8" src="Javascript/3rdParty/persist.js"></script>
 		
 		<!-- Javascripts -->
 			<script type="text/javascript" src="Javascript/Utils/DOMSubscriber.js"></script>
@@ -479,7 +480,8 @@
 
 			<script type="text/javascript" src="Javascript/Render/DisplayManager.js"></script>
 
-			<script type="text/javascript" src="Javascript/MapsStorage.js"></script>
+			<script type="text/javascript" src="Javascript/Infrastructure/MapsStorage.js"></script>
+			<script type="text/javascript" src="Javascript/Infrastructure/SavesStorage.js"></script>
 		
 		<!-- Components -->
 			<script type="text/javascript" src="Javascript/Render/Components/CAnimations.js"></script>
