* Separating Skirmish screen logic.

--- a/MobileClient/www/index.html
+++ b/MobileClient/www/index.html
@@ -589,6 +589,10 @@
 			<script type="text/javascript" src="Javascript/AssetsStaticScaler.js"></script>
 
 
+		<!-- ==========	Menu Screen ====================== -->
+			<script type="text/javascript" src="Javascript/UI/MenuScreen/SkirmishScreen.js"></script>
+			
+
 		<!-- ==========	Mobile Client - Run ====================== -->
 			<script type="text/javascript" src="Javascript/ClientStates/ClientStateManager.js"></script>
 			<script type="text/javascript" src="Javascript/ClientStates/TestGame.js"></script>
