* Added SkirmishMapSelect menu substate. Shows maps and some details, allows to pick one.

--- a/MobileClient/www/index.html
+++ b/MobileClient/www/index.html
@@ -346,9 +346,35 @@
 
 						<button class="btn_cancel" NavigateToMenu="MainMenu">Back</button>
 					</div>
+
+					<div id="SkirmishMapSelect" class="dialog_body">
+						<h2>Select map:</h2>
+
+
+						<div id="SkirmishMapSelectPreview">
+							<h3 id="SkirmishMapSelectName">
+								HexIsle
+							</h3>
+							<div id="SkirmishMapSelectCustomMap">
+								Map is custom
+							</div>
+
+							<button id="SkirmishMapSelectPrev">Prev</button>
+							<button id="SkirmishMapSelectPlay">Play</button>
+							<button id="SkirmishMapSelectNext">Next</button>
+						</div>
+
+						<div id="SkirmishMapSelectInfo" class="alone">
+							Players: 4 <br />
+							Initital credits: 200 <br />
+							Credits/Mine: 300 <br />
+						</div>
+
+						<button class="btn_cancel alone" NavigateToMenu="SkirmishMenu">Back</button>
+					</div>
 				</div>
 			</div>
-		</div>		
+		</div>
 
 		
 		<!-- ==========	Core ====================== -->
