* Added Map Selector actual preview using optimized lightweight world. Can pan/zoom. * Optimized: world destroying performance. Some mock up checks as well. * Fixed: invalidation happening too early on destroying entities, causing component destructors not get called. * Fixed: errors when destroying world and no players are playing.

--- a/MobileClient/www/index.html
+++ b/MobileClient/www/index.html
@@ -352,8 +352,11 @@
 
 
 						<div id="SkirmishMapSelectPreview">
+							<div id="GameWorldMapPreview"></div>
+
+
 							<h3 id="SkirmishMapSelectName">
-								HexIsle
+								
 							</h3>
 							<div id="SkirmishMapSelectCustomMap">
 								Map is custom
@@ -365,9 +368,6 @@
 						</div>
 
 						<div id="SkirmishMapSelectInfo" class="alone">
-							Players: 4 <br />
-							Initital credits: 200 <br />
-							Credits/Mine: 300 <br />
 						</div>
 
 						<button class="btn_cancel alone" NavigateToMenu="SkirmishMenu">Back</button>
@@ -616,6 +616,7 @@
 
 
 		<!-- ==========	Menu Screen ====================== -->
+			<script type="text/javascript" src="Javascript/UI/MenuScreen/MapPreviewMaker.js"></script>
 			<script type="text/javascript" src="Javascript/UI/MenuScreen/SkirmishScreen.js"></script>
 			
 
