* Added counter to map preview, to show loading time. * Added loading screen to map preview, as loading is slow :(

--- a/MobileClient/www/index.html
+++ b/MobileClient/www/index.html
@@ -349,10 +349,14 @@
 
 					<div id="SkirmishMapSelect" class="dialog_body">
 						<h2>Select map:</h2>
+						<div id="MapSelectorPreviewLoadingTime">33</div>
 
 
 						<div id="SkirmishMapSelectPreview">
 							<div id="GameWorldMapPreview"></div>
+							<div id="GameWorldMapPreviewLoading">
+								<div id="GameWorldMapPreviewLoadingContent">Loading</div>
+							</div>
 
 
 							<h3 id="SkirmishMapSelectName">
