* Added Units Stats screen. Automatically shows the selected unit if any.

--- a/MobileClient/www/index.html
+++ b/MobileClient/www/index.html
@@ -85,6 +85,32 @@
 				</div>
 			</div>
 
+			<div id="GameUnitsInfo" class="dialog_blocker">
+				<div id="GameUnitsInfoContainer" class="dialog dialog_container_floating">
+					<div class="dialog_title">Units Info</div>
+
+					<select id="GameUnitsInfoSelect">
+					</select>
+
+					<table id="GameUnitsInfoStatistics" class="stats_table">
+
+						<thead>
+							<tr>
+								<th colspan="2">Statistics</th>
+							</tr>
+						</thead>
+
+
+						<tbody>
+						</tbody>
+					</table>
+					
+					<div class="dialog_buttons">
+						<button id="BtnGameUnitsInfoClose" class="btn_done">Close</button>
+					</div>
+				</div>
+			</div>
+
 
 			<div id="FightScreenContainer">
 				<div id="FightFrame">
