* Added: "Next Player" blocker to pass on the phone around.

--- a/MobileClient/www/index.html
+++ b/MobileClient/www/index.html
@@ -142,6 +142,22 @@
 			</div>
 
 
+			<div id="TurnChanged" class="dialog_blocker">
+				<div id="TurnChangedContainer" class="dialog dialog_container_floating">
+					<div class="dialog_title">Turn Changed</div>
+
+					<div id="TurnChangedPlayerLable">
+					It is <span id="TurnChangedPlayerName"></span>'s turn! <br />
+					Pass your phone around and press ready.
+					</div>
+					
+					<div class="dialog_buttons">
+						<button id="BtnTurnChangedReady" class="btn_done">Ready!</button>
+					</div>
+				</div>
+			</div>
+
+
 
 			<div id="FightScreenContainer">
 				<div id="FightFrame">
