* Added simple PopUpManager

--- a/MobileClient/www/index.html
+++ b/MobileClient/www/index.html
@@ -66,6 +66,23 @@
 			</div>
 
 
+			<div id="PopUpDialog" class="dialog_blocker_clear">
+				<div id="PopUpDialogWindow">
+					<div id="PopUpDialogTitle">Title</div>
+
+
+					<div id="PopUpDialogBody">
+						<div id="PopUpDialogMessage">Message</div>
+
+						<div id="PopUpDialogButtons">
+							<button id="BtnStoreClose" class="btn_done">Close</button>
+						</div>
+					</div>
+
+				</div>
+			</div>
+
+
 			<div id="Store" class="dialog_blocker">
 				<div id="StoreContainer" class="dialog dialog_container_floating">
 					<div class="dialog_title">Unit Store</div>
@@ -674,6 +691,7 @@
 			<script type="text/javascript" src="Javascript/Render/Systems/FloatingTextsSystem.js"></script>
 			<script type="text/javascript" src="Javascript/Render/Systems/DebugTilesRenderingSystem.js"></script>
 			
+			<script type="text/javascript" src="Javascript/UI/PopUpManager.js"></script>
 			<script type="text/javascript" src="Javascript/UI/Game/StoreScreen.js"></script>
 			<script type="text/javascript" src="Javascript/UI/Game/ActionsMenuController.js"></script>
 
