* Refactor: rename "mines" & "cities" to "income"

--- a/MobileClient/www/index.html
+++ b/MobileClient/www/index.html
@@ -304,9 +304,9 @@
 								</td>
 							</tr>
 							<tr generic_map>
-								<td>Credits per mine:</td>
+								<td>Credits per base:</td>
 								<td>
-									<select id="GamePropsCreditsPerMineEditor">
+									<select id="GamePropsCreditsPerIncomeEditor">
 									</select>
 								</td>
 							</tr>
