* AI: Movement now takes terrain defenses into account. Tries to find fastest & safest path/location. * AI Fixed: MovementAttack did not consider the option to Stay. * AI: Some refactor.

--- a/MobileClient/www/index.html
+++ b/MobileClient/www/index.html
@@ -601,6 +601,7 @@
 		<!-- AI -->
 			<script type="text/javascript" src="Javascript/Core/AI/AIEvents.js"></script>
 			<script type="text/javascript" src="Javascript/Core/AI/AITask.js"></script>
+			<script type="text/javascript" src="Javascript/Core/AI/AIUtils.js"></script>
 
 			<script type="text/javascript" src="Javascript/Core/AI/Components/CAIData.js"></script>
 			<script type="text/javascript" src="Javascript/Core/AI/Systems/AISimulationSystem.js"></script>
