* Fixed: applied new UI concept to AI.

--- a/MobileClient/www/index.html
+++ b/MobileClient/www/index.html
@@ -239,17 +239,23 @@
 
 
 				<div id="AIToolbar" class="in_game_toolbar">
-					<button id="BtnAISlower">-</button>
-					<span id="LbAICredits">0</span>
-					<button id="BtnAIFaster">+</button>
-					<br />
-					<button id="BtnAIPause">Pause</button>
-					<button id="BtnAINext">Next</button>
-					<button id="BtnAIResume">Resume</button>
-					<!--span style="font-size: medium; font-family: Calibri;">
-						<span style="font-weight: bold;">Task:</span>
-						<span id="LbAIAssignmentDesc" ></span>
-					</span-->
+					<div id="LbAIName"></div>
+					<div id="BtnAIFastForward"><span>&gt;&gt;</span></div>
+					<div id="BtnAIWaiting"><span>W8</span></div>
+
+					<div id="AIToolbarDebug">
+						<button id="BtnAISlower">-</button>
+						<span id="LbAICredits">0</span>
+						<button id="BtnAIFaster">+</button>
+						<br />
+						<button id="BtnAIPause">Pause</button>
+						<button id="BtnAINext">Next</button>
+						<button id="BtnAIResume">Resume</button>
+						<!--span style="font-size: medium; font-family: Calibri;">
+							<span style="font-weight: bold;">Task:</span>
+							<span id="LbAIAssignmentDesc" ></span>
+						</span-->
+					</div>
 				</div>
 
 			</div>
