* UI Fixed: Game Menu - Menu button to close the menu. Added pressed state to menu buttons.

--- a/MobileClient/www/index.html
+++ b/MobileClient/www/index.html
@@ -173,7 +173,7 @@
 					</div>
 
 					<div id="GameMenuGroup3">
-						<div id="BtnGameMenuFake" class="btn_docked_top_small">Menu</div>
+						<div id="BtnGameMenuReturnSecondary" class="btn_docked_top_small">Menu</div>
 					</div>
 				</div>
 			</div>
