* UI: Game menu now slides down and up.It is shown at the same time with HUD. * Fixed: AnimationSystem loses track of who is controlling Tweener.

--- a/MobileClient/www/index.html
+++ b/MobileClient/www/index.html
@@ -158,10 +158,14 @@
 				</div>
 			</div>
 
-			<div id="GameMenu" class="dialog_blocker">
+			<div id="GameMenu">
+
+				<div class="dialog_blocker">
+				</div>
+
 				<div id="GameMenuContainer">
 					<div id="GameMenuGroup1">
-						<div id="BtnGameMenuReturn" class="btn_generic_wide btn_cancel">Return To Game</div>
+						<div id="BtnGameMenuReturn" class="btn_generic_wide">Return To Game</div>
 						<div class="btn_generic_wide" disabled="disabled">Settings</div>
 						<div id="BtnGameMenuQuit" class="btn_generic_wide">Quit</div>
 					</div>
@@ -173,7 +177,7 @@
 					</div>
 
 					<div id="GameMenuGroup3">
-						<div id="BtnGameMenuReturnSecondary" class="btn_docked_top_small">Menu</div>
+						<div id="BtnGameMenuToggle" class="btn_cancel btn_docked_top_small">Menu</div>
 					</div>
 				</div>
 			</div>
@@ -224,12 +228,6 @@
 				</canvas>
 				<div id="GameWorldMapEditor">
 				</div>
-
-
-				<div id="BtnGameMenuContainer">
-					<div id="BtnGameMenu" class="btn_docked_top_small">Menu</div>
-				</div>
-
 
 				<div id="GameToolbar" class="in_game_toolbar">
 					<div id="LbPlayerName"></div>
